fix solution mobile slider

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -166,6 +166,19 @@ body {
     justify-content: center;
     align-items: center;
 }
+.sols-box.mobile {
+    height: 64px;
+    margin-right: 10px;
+}
+.sols-box.mobile span {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 100%;
+    color: #272e3b;
+}
+.all-solutions .slick-slider {
+    width: calc(100% + 24px);
+}
 .all-solutions .show-more-btn {
     font-weight: 500;
     font-size: 16px;
@@ -412,7 +425,7 @@ body {
 .slick-arrow.slick-prev:hover {
     background: #ffffff;
 }
-.slick-list {
+.testimonials .slick-list {
     padding: 0 10% 0 0 !important;
 }
 
@@ -456,6 +469,7 @@ body {
 }
 .home-component {
     margin-bottom: 48px;
+    padding: 0 8px;
 }
 .home-component:last-child {
     margin-bottom: 0px;
@@ -1216,8 +1230,18 @@ body {
         flex: 0 0 100%;
         max-width: 100%;
     }
-    .slick-list {
+    .testimonials .slick-list {
         padding: 0px 0px !important;
+    }
+    .all-solutions .slick-list {
+        padding: 0 24px 0 0 !important;
+    }
+    .all-solutions .slick-slide {
+        width: 100%;
+        margin: 0 16px 0 0;
+    }
+    .all-solutions .slick-arrow.slick-next {
+        display: none !important;
     }
     .slick-arrow.slick-next {
         right: calc(10% - 36px);
